--- a/src/styles/components/Foot.css
+++ b/src/styles/components/Foot.css
@@ -1,12 +1,18 @@
 .Foot-footer {
 	/* background-color: #e9bfba; */
+	display: flex;
 	background-color: #deeffb;
-	height: 150px;
+	height: 75px;
 	padding: 20px;
 	color: #534b3a;
+	align-items: center;
 }
 
 .Foot-content {
 	margin: 0;
 	text-align: center;
+}
+
+#Foot {
+	margin-top: 4rem;
 }
