--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -25,4 +25,10 @@ img {
 	padding: 0.3rem;
 }
 
-.Project-reverse;
+.Project-reverse-image {
+	margin-right: 0.71rem;
+	margin-top: 0.269rem;
+}
+
+.Project-reverse-text {
+}
